--- a/frontend/index.html
+++ b/frontend/index.html
@@ -10,10 +10,11 @@
 
 <df-messenger
   intent="WELCOME"
-  chat-title="Mira FastFood"
-  agent-id="mira-fastfood-tcoq"
-  language-code="en">
-</df-messenger>
+  chat-title="Mira-FastFood"
+  agent-id="99a5246e-4580-4616-bb60-28349d89b2a6"
+  language-code="en"
+></df-messenger>
 
 </body>
 </html>
+
